# VoraciousVipers

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in  project.dox
include/: Controller.hpp  Game.hpp  GameManager.hpp  GameWindow.hpp  Player.hpp  Score.hpp  Track.hpp  VectorMath.hpp  Viper.hpp  ViperSegment.hpp  ViperVertices.hpp  config.hpp  config.hpp.in  debug.hpp
res/: preferences.json  user.json  viper_model.json
src/: Controller.cpp  Game.cpp  GameManager.cpp  GameWindow.cpp  Player.cpp  Score.cpp  Track.cpp  Viper.cpp  ViperSegment.cpp  ViperVertices.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp  test.json  testCollidable.cpp  testCollision.cpp  testColor.cpp  testGameOptions.cpp  testMath.cpp  testTest.cpp  testTime.cpp  testTrack.cpp  testViper.cpp
vvipers/: Arena.cpp  Arena.hpp  BodyPart.cpp  BodyPart.hpp  Bodypart.cpp  Bodypart.hpp  CMakeLists.txt  Collidable.cpp  Collidable.hpp  Collision.cpp  Collision.hpp  CollisionBody.cpp  CollisionBody.hpp  CollisionDetector.cpp  CollisionDetector.hpp  CollisionVertices.cpp  CollisionVertices.hpp  Controller.cpp  Controller.hpp  ConvexBody.cpp  ConvexBody.hpp  Engine.cpp  Engine.hpp  FlashScreen.cpp  FlashScreen.hpp  FlyingScore.cpp  FlyingScore.hpp  FontFileLoader.cpp  FontFileLoader.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  GameConfiguration.cpp  GameConfiguration.hpp  GameEvent.cpp  GameEvent.hpp  GameMaster.cpp  GameMaster.hpp  GameObject.cpp  (+56 more)
vvipers/Collision/: Collider.cpp  Collider.hpp  ColliderManager.cpp  ColliderManager.hpp  Shape.hpp
vvipers/Collisions/: CollidingBody.hpp  CollidingSegment.cpp  CollidingSegment.hpp  CollisionManager.cpp  CollisionManager.hpp
vvipers/Engine/: ColorPalette.cpp  ColorPalette.hpp  Engine.cpp  Engine.hpp  FontFileLoader.cpp  FontFileLoader.hpp  Game.cpp  Game.hpp  GameResources.cpp  GameResources.hpp  OptionsJSON.cpp  OptionsJSON.hpp  Providers.hpp  Scene.cpp  Scene.hpp  TextureFileLoader.cpp  TextureFileLoader.hpp  WindowManager.cpp  WindowManager.hpp
vvipers/GameElements/: Controller.cpp  Controller.hpp  FlyingScore.cpp  FlyingScore.hpp  Food.cpp  Food.hpp  GameEvent.cpp  GameEvent.hpp  GameObject.cpp  GameObject.hpp  Observer.cpp  Observer.hpp  Player.cpp  Player.hpp  Track.cpp  Track.hpp  Viper.cpp  Viper.hpp  ViperConfiguration.hpp  Walls.cpp  Walls.hpp
vvipers/Scenes/: Arena.cpp  Arena.hpp  ArenaScene.cpp  ArenaScene.hpp  FlashScreen.cpp  FlashScreen.hpp  FlashScreenScene.cpp  FlashScreenScene.hpp  GameOverScene.cpp  GameOverScene.hpp  GameOverScreen.cpp  GameOverScreen.hpp  MainMenuScene.cpp  MainMenuScene.hpp  MenuScene.cpp  MenuScene.hpp  OptionsMenuScene.cpp  OptionsMenuScene.hpp  PauseScene.cpp  PauseScene.hpp  PauseScreen.cpp  PauseScreen.hpp  PlayerConfScene.cpp  PlayerConfScene.hpp  Scene.cpp  Scene.hpp
vvipers/Scenes/Collision/: Bodypart.cpp  Bodypart.hpp  Collidable.cpp  Collidable.hpp  CollisionBody.cpp  CollisionBody.hpp  CollisionDetector.cpp  CollisionDetector.hpp  CollisionVertices.cpp  CollisionVertices.hpp  ConvexBody.cpp  ConvexBody.hpp
vvipers/Scenes/Collision2/: Collider.cpp  Collider.hpp  ColliderManager.cpp  ColliderManager.hpp  Shape.hpp  ShapeWrapper.hpp
vvipers/Scenes/GameElements/: Controller.cpp  Controller.hpp  FlyingScore.cpp  FlyingScore.hpp  Food.cpp  Food.hpp  GameEvent.cpp  GameEvent.hpp  GameObject.cpp  Observer.cpp  Observer.hpp  Player.cpp  Player.hpp  PlayerPanel.cpp  PlayerPanel.hpp  ProgressBar.cpp  ProgressBar.hpp  Track.cpp  Viper.cpp  Viper.hpp  Walls.cpp  Walls.hpp
vvipers/Scenes/UIElements/: Controller.cpp  Controller.hpp  FlyingScore.cpp  FlyingScore.hpp  MenuButton.cpp  MenuButton.hpp  MenuItem.cpp  MenuItem.hpp  MenuScene.cpp  MenuScene.hpp  PlayerPanel.cpp  PlayerPanel.hpp  ProgressBar.cpp
vvipers/UIElements/: Controller.cpp  Controller.hpp  FlyingScore.cpp  FlyingScore.hpp  MenuButton.cpp  MenuButton.hpp  MenuItem.cpp  MenuItem.hpp  MenuScene.cpp  MenuScene.hpp  PlayerPanel.cpp  PlayerPanel.hpp  ProgressBar.cpp  ProgressBar.hpp  SelectionButton.cpp  SelectionButton.hpp  ToggleButton.cpp  ToggleButton.hpp
vvipers/Utilities/: Shape.cpp  Shape.hpp  Time.hpp  TriangleStripArray.cpp  TriangleStripArray.hpp  VVColor.hpp  VVMath.hpp  Vec2.cpp  Vec2.hpp  debug.hpp
